src/site/styles/custom-style.scss
:root {
    --h1-color: var(--interactive-accent);
}

body {
    --graph-main: var(--text-accent);
    --graph-muted: rgba(126, 126, 126, 0.5);

    .timestamps {
        display: flex;
        flex-direction: row;
        font-size: 0.8em;
        color: var(--text-muted);
        gap: 10px;
        margin-top: 20px;

        div {
            display: flex;
            flex-direction: row;
            gap: 3px;
            align-items: center;
        }
    }

    .notelink {
        img {
            height: 16px;
            width: auto;
        }
    }

    h1 {
        font-size: 2em !important; /* 40px/16=2.5em */
        img {
            height: 32px;
            width: auto;
        }
    }

    h2 {
        font-size: 1.5em !important; /* 30px/16=1.875em */
    }

    h3 {
        font-size: 1.17em !important;
    }

    h4 {
        font-size: 1em !important;
        font-weight: bolder !important;
    }

    h5 {
        font-size: 0.83em !important;
        font-weight: bolder !important;
    }

    h6 {
        font-size: 0.67em !important;
        font-weight: bolder !important;
    }

    table {
        width: 100% !important;
        border: 1px solid lightgray !important;

        td,
        th {
            padding: 5px 10px !important;

            hr {
                margin: 5px !important;
            }
        }
    }

    .graph {
        flex: unset !important;
        @media (max-width: 1490px) {
            display: block !important;
            order: 3;
        }
    }

    .toc {
        @media (max-width: 1490px) {
            display: block !important;
        }
    }

    .sidebar-container {
        flex-wrap: wrap;
        & > div {
            min-width: 300px;
        }

        @media (max-width: 1490px) {
            flex-direction: row;
            justify-content: space-between;
        }
    }

    nav.filetree-sidebar {
        .fa-sticky-note {
            display: none !important;
        }
    }

    nav.toc {
        ol {
            list-style: none;
            padding-left: 10px;
            border-left: 2px solid var(--background-secondary);
        }

        & > ol {
            padding-left: 0;
            border-left: none;
        }
    }

    .transclusion {
        position: relative;
        .markdown-embed-link {
            z-index: 99;
            display: block;
            width: auto !important;
        }
    }

    .header-tags {
        display: flex;
        flex-wrap: wrap;
        margin-top: 10px;
        gap: 5px;
    }

    header {
        margin-bottom: 1.8em;
    }

    .cm-s-obsidian > *[id] {
        position: relative;
        cursor: pointer;
        &:hover {
            border: 1px dotted;
            border-color: var(--text-accent);
            margin-left: -10px;
            margin-right: -10px;
            padding: 10px;
        }
        &:hover::before {
            content: "Double-click to copy link";
            position: absolute;
            right: 0;
            top: -1.55em;
            font-weight: normal;
            font-size: 12px;
            color: var(--text-accent);
            font-variant: initial;
            letter-spacing: 0.24px;
            line-height: 14px;
        }
    }

    .referred {
        border: 1px dashed;
        border-color: var(--text-accent);
        padding: 10px;
        margin-left: -10px;
        margin-right: -10px;
    }

    #floating-control {
        position: fixed;
        color: var(--link-color);
        bottom: 1vmax;
        right: 1vmax;
        font-size: 24px;
        z-index: 999999;
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        gap: 10px;

        .svg-icon,
        i {
            cursor: pointer;
            height: 24px;
            width: auto;
        }

        #theme-switch {
            .light {
                display: none;
            }

            .dark {
                display: none;
            }

            .auto {
                display: none;
            }
        }

        #theme-switch.light {
            .light {
                display: inline;
            }
        }

        #theme-switch.dark {
            .dark {
                display: inline;
            }
        }

        #theme-switch.auto {
            .auto {
                display: inline;
            }
        }
    }

    .fnote {
        display: none;
        background-color: var(--background-primary);
        border: 1px solid var(--text-accent);
        position: fixed;
        bottom: 10px;
        left: 0;
        right: 0;
        padding: 10px;
        text-align: center;
        z-index: 999;
    }

    .footnote-ref {
        line-height: 85%;

        .fnote-marker {
            background-color: var(--text-accent);
            padding: 2px 5px;
            color: white;
            border-radius: 4px;
            text-decoration: none;
            font-size: 0.7em;
            margin-top: -3px;
            &:hover {
                opacity: 0.7;
            }
        }
    }

    .shownote {
        display: block;
    }

    #forest-graph {
        display: flex;
        justify-content: center;
        align-items: center;
        padding-bottom: 20px;
        flex-direction: column;
        .forest-body {
            display: inline-flex;
            flex-direction: column;
            transform: rotate(45deg);
            margin: 60px;
            align-items: flex-end;

            .forest-row {
                display: flex;
                flex-direction: row;
                align-items: flex-end;

                a {
                    width: 25px;
                    height: 25px;
                    cursor: pointer;
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    margin-top: -2px;
                    margin-left: -2px;

                    img {
                        transform: rotate(-45deg);
                    }
                }

                .plane {
                    cursor: inherit;
                }
            }
        }

        .forest-legends {
            margin-top: 10px;
            display: flex;
            gap: 10px;
            width: 100%;
            justify-content: center;
            flex-wrap: wrap;

            font-size: 0.8em;
            color: var(--text-muted);

            img {
                height: 1.5em;
                width: auto;
                margin-right: 5px;
            }
        }
    }

    .toc-container li::before {
        content: "" !important;
    }

    nav.navbar {
        .navbar-inner {
            h1::before {
                content: " ";
                display: inline-block;
                width: 1em;
                height: 1.2em;
                background-size: contain;
                background-repeat: no-repeat;
                background-image: url(/img/logo.svg);
                margin-right: 5px;
                background-position: bottom;
            }
        }
    }
    .filetree-sidebar {
        h1::before {
            content: " ";
            display: block;
            width: 100%;
            height: 3em;
            background-size: contain;
            background-repeat: no-repeat;
            background-image: url(/img/logo.svg);
            background-position: center;
        }
    }
}

.graph-title-container {
    position: relative;
    width: 100% !important;
}

#full-graph {
    position: fixed;
    top: 50%;
    left: 50%;
    height: calc(100vmin - 100px);
    width: calc(100vmin - 100px);
    min-height: 350px;
    min-width: 350px;
    transform: translate(-50%, -50%);
    z-index: 9999;
    display: none;
    background-color: var(--background-secondary);

    #full-graph-container {
        width: 100%;
        height: 100%;
    }

    #full-graph-close {
        position: absolute;
        top: 10px;
        right: 10px;
        cursor: pointer;
        z-index: 9;
    }
}

#full-graph.show {
    display: block;
}

#graph-controls {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 5px;
    position: absolute;
    top: 115%;

    right: 10px;
    left: 10px;
    color: var(--text-accent);
    z-index: 9;

    i {
        cursor: pointer;
    }

    .depth-control {
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        gap: 7px;

        .slider {
            datalist {
                display: flex;
                flex-direction: row;
                justify-content: space-between;
                font-size: 0.6rem;
                // padding: 2px 0px;
                // width: 200px;
            }

            option {
                padding: 0;
            }
        }

        #depth-display {
            background-color: var(--text-accent);
            color: white;
            width: 1rem;
            height: 1rem;
            font-size: 0.8rem;
            display: flex;
            justify-content: center;
            align-items: center;
            margin-top: 0.3rem;
        }
    }
}

.callout {
    background-color: transparent !important;
    border: 1px solid rgba(var(--callout-color), 1) !important;
    position: relative;
    overflow: visible;
    margin-top: calc(1em + 10px);

    .callout-title {
        display: inline-flex;
        position: absolute;
        top: -10px;
        background-color: var(--background-primary);
        padding-left: 5px;
        padding-right: 5px;
    }
}

body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="stone"]::before,
body.filetree-note-icon .filename[data-note-icon="stone"]::before,
body.links-note-icon .internal-link[data-note-icon="stone"]::before,
body.backlinks-note-icon .backlink[data-note-icon="stone"]::before {
    background-image: url(/img/stone.svg);
}

body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="signpost"]::before,
body.filetree-note-icon .filename[data-note-icon="signpost"]::before,
body.links-note-icon .internal-link[data-note-icon="signpost"]::before,
body.backlinks-note-icon .backlink[data-note-icon="signpost"]::before {
    background-image: url(/img/signpost.svg);
}

body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="withered"]::before,
body.filetree-note-icon .filename[data-note-icon="withered"]::before,
body.links-note-icon .internal-link[data-note-icon="withered"]::before,
body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
    background-image: url(/img/withered.svg);
}

.align-icon {
    display: inline-flex;
    align-items: center;
}

.pill {
  background-color: var(--tag-background);
  border: var(--tag-border-width) solid var(--tag-border-color);
  border-radius: var(--tag-radius);
  color: var(--tag-color);
  font-size: var(--tag-size);
  text-decoration: var(--tag-decoration);
  padding: var(--tag-padding-y) var(--tag-padding-x);
  line-height: 1;

  &:hover {
        background-color: var(--tag-background-hover);
        border: var(--tag-border-width) solid var(--tag-border-color-hover);
        color: var(--tag-color-hover);
        text-decoration: var(--tag-decoration-hover);
    }
}

.aliases {
    display: flex;
    flex-direction: row;
    gap: 5px;
    align-items: center;
    margin-top: 20px;
    color: var(--tag-color);

    .heading:only-child {
        display: none;
    }

    
}

